--- a/lyric.css
+++ b/lyric.css
@@ -1,5 +1,5 @@
 body{
-    background-color:#121212;
+    background-color: #1a1a1a;
 }
 div{
     background-color: #7D00C9;
@@ -10,4 +10,5 @@ div{
 }
 #Credits{
     color: whitesmoke;
+
 }
